--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -102,10 +102,10 @@
                                 {
                                     <tr>
                                         <td>
-                                            <div class="avatar avatar-md">
+                                            <div class="avatar avatar-md border-0">
 
                                                 <img src="/Public/images/product/@data.Product_image" alt="image"
-                                                    class="avatar-img rounded">
+                                                    class="avatar-img rounded ">
                                             </div>
                                         </td>
                                         <td>
