add cart and search button

--- a/ebay/Areas/Admin/Views/Product/Index.cshtml
+++ b/ebay/Areas/Admin/Views/Product/Index.cshtml
@@ -24,7 +24,8 @@
                                 </a>
                             </div>
                         </div>
-                        @* <div class="row pt-3">
+                        @*
+                        <div class="row pt-3">
                         <div class="col-6">
                         <h1 class="text-primary">Product List</h1>
                         </div>
@@ -41,7 +42,8 @@
                         <i class="bi bi-plus-circle"></i>&nbsp;Add New Product
                         </a>
                         </div>
-                        </div> *@
+                        </div>
+                        *@
 
                         <table class="table table-borderless table-hover">
                             <thead>
@@ -86,11 +88,6 @@
                                     </th>
                                     <th>
                                         <h3>
-                                            ImageUrl
-                                        </h3>
-                                    </th>
-                                    <th>
-                                        <h3>
                                             Action
                                         </h3>
                                     </th>
@@ -130,9 +127,6 @@
                                             @data.Category.Name
                                         </td>
                                         <td>
-                                            @data.Product_image
-                                        </td>
-                                        <td>
                                             <div class="dropdown">
                                                 <button class="btn btn-md border-0 more-horizontal" type="button"
                                                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -142,34 +136,48 @@
                                                 </button>
                                                 <ul class="dropdown-menu dropdown-menu-right">
                                                     <li>
-                                                        <button class="dropdown-item" asp-controller="Product" asp-action="Edit"
-                                                            asp-route-id="@data.id">
+                                                        <button class="dropdown-item" asp-controller="Product"
+                                                            asp-action="Edit" asp-route-id="@data.id">
                                                             <i class="bi bi-pencil"></i>&nbsp; Edit
                                                         </button>
                                                     </li>
                                                     <li>
-                                                        <button asp-action="Delete" asp-controller="Product"
-                                                            asp-route-id="@data.id" class="dropdown-item">
-                                                            <i class="bi bi-trash"></i>&nbsp; Delete
+                                                        <!-- Button trigger modal -->
+                                                        <button class="dropdown-item" type="button" data-bs-toggle="modal"
+                                                            data-bs-target="#exampleModal">
+                                                            <i class="bi bi-trash"></i>&nbsp Delete
                                                         </button>
                                                     </li>
                                                 </ul>
                                             </div>
-                                            @* <div class="w-75 btn-group" role="group">
-                                        <a class="btn btn-primary mx-2" asp-controller="Product" asp-action="Edit"
-                                        asp-route-id="@data.id">
-                                        <i class="bi bi-pencil"></i>&nbsp; Edit
-                                        </a>
-
-                                        <button asp-action="Delete" asp-controller="Product" asp-route-id="@data.id"
-                                        class="btn btn-danger mx-2">
-                                        <i class="bi bi-trash"></i>&nbsp; Delete
-                                        </button>
-
-                                        </div> *@
                                         </td>
 
                                     </tr>
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Warning!!!</h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Are you sure you want to delete?
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Close</button>
+                                                    <button asp-action="Delete" class="btn btn-danger"
+                                                        asp-controller="Product" asp-route-id="@data.id"
+                                                        class="dropdown-item">
+                                                        Delete
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 }
                             </tbody>
 
