--- a/ebay/Areas/Public/Views/Public/Cart.cshtml
+++ b/ebay/Areas/Public/Views/Public/Cart.cshtml
@@ -9,7 +9,7 @@
             <form class="col-md-12" method="post">
                 <div class="site-blocks-table">
                     <table class="table">
-                        <thead>
+                        @* <thead>
                             <tr>
                                 <th class="product-thumbnail">Image</th>
                                 <th class="product-name">Product</th>
@@ -18,7 +18,8 @@
                                 <th class="product-total">Total</th>
                                 <th class="product-remove">Remove</th>
                             </tr>
-                        </thead>
+                        </thead> *@
+                        <h1 class="heading" >Shopping Cart</h1>
                         <tbody>
                             <tr>
                                 <td class="product-thumbnail">
