--- a/ebay/Areas/Public/Views/Public/Index.cshtml
+++ b/ebay/Areas/Public/Views/Public/Index.cshtml
@@ -1,9 +1,13 @@
 @{
 	Layout = "_publicLayout";
 }
-<partial name="_publicNav" />
+@model ebay.ViewModel.ProductSearchVm
+<form>
+	<partial name="_publicNav" />
+</form>
 
-<!-- Start Hero Section -->
+@* <!-- Start Hero Section -->
+
 <div class="hero">
 	<div class="container">
 		<div class="row justify-content-between">
@@ -24,68 +28,149 @@
 		</div>
 	</div>
 </div>
-<!-- End Hero Section -->
+<!-- End Hero Section --> *@
+<!-- Carousoel Section -->
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active"data-bs-interval="3000">
+      <img src="/Public/images/slider/gift.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item"data-bs-interval="3000">
+      <img src="/Public/images/slider/gaming.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item"data-bs-interval="3000">
+      <img src="/Public/images/slider/books.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<!-- Carousoel Section -->
 
+@*
 <!-- Start Product Section -->
+<div class="product-section">
+<div class="container">
+<div class="row">
+
+<!-- Start Column 1 -->
+<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
+<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
+<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
+velit imperdiet dolor tempor tristique. </p>
+<p><a href="shop.html" class="btn">Explore</a></p>
+</div>
+<!-- End Column 1 -->
+
+<!-- Start Column 2 -->
+<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+<a class="product-item" href="cart.html">
+<img src="/Public/images/product-1.png" class="img-fluid product-thumbnail">
+<h3 class="product-title">Nordic Chair</h3>
+<strong class="product-price">$50.00</strong>
+
+<span class="icon-cross">
+<img src="/Public/images/cross.svg" class="img-fluid">
+</span>
+</a>
+</div>
+<!-- End Column 2 -->
+
+<!-- Start Column 3 -->
+<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+<a class="product-item" href="cart.html">
+<img src="/Public/images/product-2.png" class="img-fluid product-thumbnail">
+<h3 class="product-title">Kruzo Aero Chair</h3>
+<strong class="product-price">$78.00</strong>
+
+<span class="icon-cross">
+<img src="/Public/images/cross.svg" class="img-fluid">
+</span>
+</a>
+</div>
+<!-- End Column 3 -->
+
+<!-- Start Column 4 -->
+<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+<a class="product-item" href="cart.html">
+<img src="/Public/images/product-3.png" class="img-fluid product-thumbnail">
+<h3 class="product-title">Ergonomic Chair</h3>
+<strong class="product-price">$43.00</strong>
+
+<span class="icon-cross">
+<img src="/Public/images/cross.svg" class="img-fluid">
+</span>
+</a>
+</div>
+<!-- End Column 4 -->
+
+</div>
+</div>
+</div>
+<!-- End Product Section --> *@
+
 <div class="product-section">
 	<div class="container">
 		<div class="row">
+			@foreach (var product in Model.Data)
+			{
+				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
 
-			<!-- Start Column 1 -->
-			<div class="col-md-12 col-lg-3 mb-5 mb-lg-0">
-				<h2 class="mb-4 section-title">Crafted with excellent material.</h2>
-				<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
-					velit imperdiet dolor tempor tristique. </p>
-				<p><a href="shop.html" class="btn">Explore</a></p>
-			</div>
-			<!-- End Column 1 -->
+					<a class="product-item" asp-action="Detail" asp-route-id="@product.id">
+						<div class="card">
+							<img src="/Public/images/product/@product.Product_image"
+								class="card-img-top rounded mx-auto d-block">
+						</div>
+						<div class="card-body">
+							<div class="pl-1">
+								<h3 class="product-title">@product.Name</h3>
+								<strong class="product-price">$@product.Price</strong>
+								<span class="icon-cross">
+									<img src="/Public/images/cross.svg" class="img-fluid">
+								</span>
+							</div>
 
-			<!-- Start Column 2 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="/Public/images/product-1.png" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Nordic Chair</h3>
-					<strong class="product-price">$50.00</strong>
+						</div>
+					</a>
 
-					<span class="icon-cross">
-						<img src="/Public/images/cross.svg" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 2 -->
-
-			<!-- Start Column 3 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="/Public/images/product-2.png" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Kruzo Aero Chair</h3>
-					<strong class="product-price">$78.00</strong>
-
-					<span class="icon-cross">
-						<img src="/Public/images/cross.svg" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 3 -->
-
-			<!-- Start Column 4 -->
-			<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-				<a class="product-item" href="cart.html">
-					<img src="/Public/images/product-3.png" class="img-fluid product-thumbnail">
-					<h3 class="product-title">Ergonomic Chair</h3>
-					<strong class="product-price">$43.00</strong>
-
-					<span class="icon-cross">
-						<img src="/Public/images/cross.svg" class="img-fluid">
-					</span>
-				</a>
-			</div>
-			<!-- End Column 4 -->
-
+				</div>
+			}
 		</div>
 	</div>
 </div>
-<!-- End Product Section -->
+
+@* <div class="row pb-3">
+@foreach (var product in Model.Data)
+{
+<div class="col-lg-3 col-sm-6">
+<div class="row p-2 ">
+<div class="col-12 p-1">
+<div class="card border-0 p-3 shadow border-top border-5 rounded">
+<img src="/Public/images/product/@product.Product_image" class="card-img-top rounded">
+<div class="card-body pb-0">
+<div class="pl-1">
+<p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@product.Name</p>
+<p class="card-title text-center">@product.Price.ToString("c")</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+}
+</div> *@
+
 
 <!-- Start Why Choose Us Section -->
 <div class="why-choose-section">
@@ -103,7 +188,8 @@
 								<img src="/Public/images/truck.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Fast &amp; Free Shipping</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
+							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+								vulputate.
 							</p>
 						</div>
 					</div>
@@ -114,7 +200,8 @@
 								<img src="/Public/images/bag.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Easy to Shop</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
+							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+								vulputate.
 							</p>
 						</div>
 					</div>
@@ -125,7 +212,8 @@
 								<img src="/Public/images/support.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>24/7 Support</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
+							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+								vulputate.
 							</p>
 						</div>
 					</div>
@@ -136,7 +224,8 @@
 								<img src="/Public/images/return.svg" alt="Image" class="imf-fluid">
 							</div>
 							<h3>Hassle Free Returns</h3>
-							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.
+							<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+								vulputate.
 							</p>
 						</div>
 					</div>
@@ -168,8 +257,10 @@
 			</div>
 			<div class="col-lg-5 ps-lg-5">
 				<h2 class="section-title mb-4">We Help You Make Modern Interior Design</h2>
-				<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada. Nullam
-					ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque habitant
+				<p>Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio quis nisl dapibus malesuada.
+					Nullam
+					ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique. Pellentesque
+					habitant
 					morbi tristique senectus et netus et malesuada</p>
 
 				<ul class="list-unstyled custom-list my-4">
@@ -260,8 +351,10 @@
 
 									<div class="testimonial-block text-center">
 										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
+											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
+												odio
+												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+												vulputate
 												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
 												tristique senectus et netus et malesuada fames ac turpis egestas.
 												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
@@ -288,8 +381,10 @@
 
 									<div class="testimonial-block text-center">
 										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
+											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
+												odio
+												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+												vulputate
 												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
 												tristique senectus et netus et malesuada fames ac turpis egestas.
 												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
@@ -316,8 +411,10 @@
 
 									<div class="testimonial-block text-center">
 										<blockquote class="mb-5">
-											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae odio
-												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate
+											<p>&ldquo;Donec facilisis quam ut purus rutrum lobortis. Donec vitae
+												odio
+												quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
+												vulputate
 												velit imperdiet dolor tempor tristique. Pellentesque habitant morbi
 												tristique senectus et netus et malesuada fames ac turpis egestas.
 												Integer convallis volutpat dui quis scelerisque.&rdquo;</p>
