fix cart operation

--- a/ebay/Views/Shared/_LoginPartial.cshtml
+++ b/ebay/Views/Shared/_LoginPartial.cshtml
@@ -9,6 +9,7 @@
     <div class="d-flex gap-2 align-items-center justify-content-center">
         <span>
             @currentUser?.FirstName
+            @currentUser?.Id
         </span>
         @* <a asp-action="LogOut" asp-controller="Auth" class= "btn btn-danger">
             Logout
