--- a/ebay/Areas/Public/Views/Public/Detail.cshtml
+++ b/ebay/Areas/Public/Views/Public/Detail.cshtml
@@ -1,8 +1,9 @@
 @{
     Layout = "_publicLayout";
 }
-@model ebay.ViewModel.ProductVm
+@model ebay.ViewModel.cartVm
 <form method="post">
+    <input hidden asp-for="Product_id" />
     <div class="card shadow border-0 mt-4">
         @* <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
@@ -86,10 +87,9 @@
                         </div>
                         <div class="row">
                             <div class="col-12 col-md-6 pb-1">
-                                <button type="submit" disabled 
-                                    class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold"
-                                >
-                                Add to Cart (Comming Soon...)
+                                <button type="submit"  
+                                    class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold">
+                                Add to Cart
                             </button>
                             </div>
                         </div>
